[gd_scene load_steps=14 format=3 uid="uid://4bpkdmp6mrjf"]

[ext_resource type="Script" path="res://games/8(Hangman)/scripts/game.gd" id="1_hflmt"]
[ext_resource type="Texture2D" uid="uid://nf6q0k6qb11a" path="res://games/8(Hangman)/assets/textures/chalkboard.png" id="1_v6svt"]
[ext_resource type="Script" path="res://games/8(Hangman)/scripts/hangman.gd" id="2_6h4jn"]
[ext_resource type="FontFile" uid="uid://ckdhmlcbijnfi" path="res://games/8(Hangman)/assets/font/Laptev_Brush.otf" id="2_hd1g7"]
[ext_resource type="Script" path="res://games/8(Hangman)/scripts/letters_manager.gd" id="2_t66q1"]
[ext_resource type="AudioStream" uid="uid://clmjbvjhpv7o2" path="res://games/8(Hangman)/assets/sfx/eklee-KeyPressMac04.ogg" id="5_03jfo"]
[ext_resource type="Texture2D" uid="uid://1f5fxyb2vnxc" path="res://games/8(Hangman)/assets/textures/theme/default/panel/panel.png" id="8_81e48"]
[ext_resource type="Script" path="res://games/8(Hangman)/scripts/won_menu.gd" id="9_errpd"]
[ext_resource type="Texture2D" uid="uid://5nb71lgbw7lk" path="res://games/8(Hangman)/assets/textures/theme/default/button/normal.png" id="9_pxuwx"]
[ext_resource type="Texture2D" uid="uid://7ocxtwfah24" path="res://games/8(Hangman)/assets/textures/theme/default/button/pressed.png" id="10_r0l4j"]
[ext_resource type="Texture2D" uid="uid://besoybfvhi0rs" path="res://games/8(Hangman)/assets/textures/theme/default/button/hover.png" id="11_diper"]
[ext_resource type="PackedScene" uid="uid://ct3hdscfmnask" path="res://games/8(Hangman)/modules/confetti/fake_confetti_particles.tscn" id="12_n0wuc"]
[ext_resource type="AudioStream" uid="uid://ba47btugfqdxu" path="res://games/8(Hangman)/assets/sfx/win-sound-2-1.ogg" id="14_xmfn7"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hflmt")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_v6svt")
stretch_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Hangman" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
stretch_mode = 5
script = ExtResource("2_6h4jn")

[node name="GuessLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
size_flags_stretch_ratio = 20.0
theme_override_fonts/font = ExtResource("2_hd1g7")
theme_override_font_sizes/font_size = 50

[node name="TypeSound" type="AudioStreamPlayer2D" parent="MarginContainer/VBoxContainer"]
position = Vector2(556, 608)
stream = ExtResource("5_03jfo")

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
size_flags_stretch_ratio = 7.02
columns = 10
script = ExtResource("2_t66q1")

[node name="Overlay" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BG" type="ColorRect" parent="Overlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.635294)

[node name="Won" type="NinePatchRect" parent="Overlay"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.5
offset_top = -161.0
offset_right = 123.5
offset_bottom = 161.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_81e48")
region_rect = Rect2(7.48507, 9.94455, 127.563, 30.1341)
script = ExtResource("9_errpd")

[node name="MarginContainer" type="MarginContainer" parent="Overlay/Won"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Overlay/Won/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Overlay/Won/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_hd1g7")
theme_override_font_sizes/font_size = 30
text = "Победа"

[node name="VBoxContainer" type="VBoxContainer" parent="Overlay/Won/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="TextureButton" type="TextureButton" parent="Overlay/Won/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
texture_normal = ExtResource("9_pxuwx")
texture_pressed = ExtResource("10_r0l4j")
texture_hover = ExtResource("11_diper")
stretch_mode = 0

[node name="Label" type="Label" parent="Overlay/Won/MarginContainer/VBoxContainer/VBoxContainer/TextureButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_hd1g7")
theme_override_font_sizes/font_size = 25
text = "Еще раз"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton2" type="TextureButton" parent="Overlay/Won/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
texture_normal = ExtResource("9_pxuwx")
texture_pressed = ExtResource("10_r0l4j")
texture_hover = ExtResource("11_diper")
stretch_mode = 0

[node name="Label" type="Label" parent="Overlay/Won/MarginContainer/VBoxContainer/VBoxContainer/TextureButton2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_hd1g7")
theme_override_font_sizes/font_size = 25
text = "Выйти"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Confetti" type="Node2D" parent="Overlay/Won"]

[node name="FakeConfettiParticles" parent="Overlay/Won/Confetti" instance=ExtResource("12_n0wuc")]
position = Vector2(-228.5, 137)

[node name="FakeConfettiParticles2" parent="Overlay/Won/Confetti" instance=ExtResource("12_n0wuc")]
position = Vector2(288.5, -79)

[node name="FakeConfettiParticles3" parent="Overlay/Won/Confetti" instance=ExtResource("12_n0wuc")]
position = Vector2(592.5, 148)

[node name="WinSound" type="AudioStreamPlayer2D" parent="Overlay/Won"]
stream = ExtResource("14_xmfn7")

[node name="GameOver" type="NinePatchRect" parent="Overlay"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.5
offset_top = -161.0
offset_right = 123.5
offset_bottom = 161.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_81e48")
region_rect = Rect2(7.48507, 9.94455, 127.563, 30.1341)
script = ExtResource("9_errpd")

[node name="MarginContainer" type="MarginContainer" parent="Overlay/GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Overlay/GameOver/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Overlay/GameOver/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_hd1g7")
theme_override_font_sizes/font_size = 30
text = "Вы проиграли"

[node name="VBoxContainer" type="VBoxContainer" parent="Overlay/GameOver/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="TextureButton" type="TextureButton" parent="Overlay/GameOver/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
texture_normal = ExtResource("9_pxuwx")
texture_pressed = ExtResource("10_r0l4j")
texture_hover = ExtResource("11_diper")
stretch_mode = 0

[node name="Label" type="Label" parent="Overlay/GameOver/MarginContainer/VBoxContainer/VBoxContainer/TextureButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_hd1g7")
theme_override_font_sizes/font_size = 25
text = "Еще раз"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton2" type="TextureButton" parent="Overlay/GameOver/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
texture_normal = ExtResource("9_pxuwx")
texture_pressed = ExtResource("10_r0l4j")
texture_hover = ExtResource("11_diper")
stretch_mode = 0

[node name="Label" type="Label" parent="Overlay/GameOver/MarginContainer/VBoxContainer/VBoxContainer/TextureButton2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_hd1g7")
theme_override_font_sizes/font_size = 25
text = "Выйти"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="Overlay/Won/MarginContainer/VBoxContainer/VBoxContainer/TextureButton" to="Overlay/Won" method="on_replay_button_down"]
[connection signal="button_down" from="Overlay/Won/MarginContainer/VBoxContainer/VBoxContainer/TextureButton2" to="Overlay/Won" method="on_exit_button_down"]
[connection signal="button_down" from="Overlay/GameOver/MarginContainer/VBoxContainer/VBoxContainer/TextureButton" to="Overlay/GameOver" method="on_replay_button_down"]
[connection signal="button_down" from="Overlay/GameOver/MarginContainer/VBoxContainer/VBoxContainer/TextureButton2" to="Overlay/GameOver" method="on_exit_button_down"]
